# Brush-Penetration

./: .gitignore  README.md  SCF_and_theory_compare.py  brush_penetration_new_chain_acr.py  main.py  pyproject.toml
sfbox_api/: __init__.py  composition.py  frame.py  lattice.py  molecule.py  monomer.py  newton.py  system.py  zoo.py
sfbox_api/data/: info.txt  input.in  input.kal  input.pro  kal.tmp  profile.tmp
tests/: test_composition.py
