[tool.poetry]
name = "sfbox-api"
version = "1.4.0"
description = "Application programming interface of the SFbox program"
authors = ["Ivan Mikhailov <mikhailov.ivan.imc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
sympy = "^1.12"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.3"
isort = "^5.12.0"
black = "^23.10.1"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
